parser/src/snapshots/long_parser__decl__decl_spec_long_long_long.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Err(
    Message(
        "Cannot specify 'long'",
        None:1:11,
    ),
)
