parser/src/snapshots/long_parser__decl__decl_spec_short.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: Short(
            Signed,
        ),
        loc: None:1:1,
    },
)
