parser/src/snapshots/long_parser__decl__decl_spec_unsigned_long_int.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: Long(
            Unsigned,
        ),
        loc: None:1:1,
    },
)
