parser/src/snapshots/long_parser__decl__decl_spec_wchar.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: WChar(
            Signed,
        ),
        loc: None:1:1,
    },
)
