parser/src/snapshots/long_parser__decl__decl_var.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl()

---
Ok(
    Located {
        inner: SimpleDecl(
            [
                SimpleDecl {
                    name: Ident(
                        "var",
                    ),
                    ty: Int(
                        Signed,
                    ),
                    init: None,
                },
            ],
        ),
        loc: None:1:1,
    },
)
