parser/src/snapshots/long_parser__decl__decl_var3.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl()

---
Ok(
    Located {
        inner: SimpleDecl(
            [
                SimpleDecl {
                    name: Ident(
                        "ptr",
                    ),
                    ty: Pointer(
                        Int(
                            Signed,
                        ),
                    ),
                    init: None,
                },
                SimpleDecl {
                    name: Ident(
                        "i",
                    ),
                    ty: Int(
                        Signed,
                    ),
                    init: None,
                },
            ],
        ),
        loc: None:1:1,
    },
)
