parser/src/snapshots/long_parser__decl__declarator_func.snap
---
source: parser/src/decl.rs
expression: "Result{ty, declarator_id,}"

---
Result {
    ty: Func(
        FuncType {
            ret: Void,
        },
    ),
    declarator_id: Some(
        Ident(
            "f",
        ),
    ),
}
