parser/src/snapshots/long_parser__decl__declarator_id.snap
---
source: parser/src/decl.rs
expression: "Result{ty, declarator_id,}"

---
Result {
    ty: Void,
    declarator_id: Some(
        Ident(
            "var",
        ),
    ),
}
