parser/src/snapshots/long_parser__decl__declarator_lvalref.snap
---
source: parser/src/decl.rs
expression: "parser.parse_declarator(Type::Void)"

---
Ok(
    LValueRef(
        Void,
    ),
)
