parser/src/snapshots/long_parser__decl__declarator_many_ptr.snap
---
source: parser/src/decl.rs
expression: "parser.parse_declarator(Type::Void)"

---
Ok(
    Pointer(
        Pointer(
            Pointer(
                Pointer(
                    Void,
                ),
            ),
        ),
    ),
)
